<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="20"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_perm_identity_white_24dp"
        android:orderInCategory="30"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
<!--с 30 версии андроид SearchView включен в androidx-->