<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:clipToPadding="false"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#80cff2da"
        android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_flag_favorite"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_name_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            tools:text="@string/name"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_area_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="4dp"
                tools:text="@string/area"
                />

            <TextView
                android:id="@+id/tv_population_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginBottom="8dp"
                tools:text="@string/population"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>